<resources>
    <string name="app_name">Final Project</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="category">Category :</string>
    <string name="area">Area :</string>
    <string name="add_to_favorites">Add to Favorites</string>
    <string name="show_more">Show More</string>
    <string name="long_text">Long text</string>
    <string name="todo">TODO</string>
    <string name="home">Home</string>
    <string name="sans_serif_condensed_medium">sans-serif-condensed-medium</string>
    <string name="what_would_you_like_to_eat">What would you like to eat</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register_here">Register here</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="login_here">Login Here</string>
    <string name="type_meal_name">Type meal name ...</string>
    <string name="no_favorites">No Favorites...</string>
    <string name="search">Search</string>
    <string name="favorite">Favorite</string>
    <string name="about_us">About Us</string>
    <string name="sign_out">Sign Out</string>
    <string name="fast_food">Fast Food</string>
    <string name="our_team">Our Team</string>
    <string name="rawan_shawky">Rawan Shawky</string>
    <string name="mohamed_ragab">Mohamed Ragab</string>
    <string name="omar_mohamed">Omar Mohamed</string>
    <string name="ahmad_ayman">Ahmad Ayman</string>
    <string name="recipe_app">Recipe App</string>
    <string name="about_the_creator">About the Creator</string>
    <string name="nav_drawer_start">start</string>
    <string name="nav_drawer_close">close</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="text">Text</string>
</resources>