<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/action_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />

        <item
            android:id="@+id/action_search"
            android:title="@string/search"
            android:icon="@drawable/ic_search"
            />
        <item
            android:id="@+id/action_fav"
            android:icon="@drawable/ic_fav"
            android:title="@string/favorite" />

        <item
            android:id="@+id/action_about"
            android:icon="@drawable/about_us"
            android:title="@string/about_us" />
        <item
            android:id="@+id/action_SignOut"
            android:icon="@drawable/baseline_exit_to_app_24"
            android:title="@string/sign_out" />
    </group>
</menu>